Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21541

"advanced find" should not scan .autosave files

XMLWordPrintable

    • 7a77ac5dd1f02cc91c57f549b8711bbcc5ea5a71 (qt-creator/qt-creator/4.8)

      when doing a global search while having unsaved files, hits from the .autosave files will show up in the results. this should obviously not happen.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            buddenha Oswald Buddenhagen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes