Do not search our own autosave files by default

When doing a "Files in File System" search. Also make sure that the
default filter is always available in the drop down.

Fixes: QTCREATORBUG-21541
Change-Id: Id8b315691b78e5d956cebf73067683dea8f8ca51
Reviewed-by: David Schulz <david.schulz@qt.io>